--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -1220,34 +1220,32 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,398,213,50,14
 END
 
-IDD_FINDTASKS_DIALOG DIALOG DISCARDABLE  0, 0, 377, 286
+IDD_FINDTASKS_DIALOG DIALOG DISCARDABLE  0, 0, 373, 286
 STYLE WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Find Tasks"
 FONT 8, "Tahoma"
 BEGIN
     COMBOBOX        IDC_SEARCHLIST,85,3,71,121,CBS_DROPDOWN | 
                     CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "&Search:",IDC_SEARCHLABEL,5,24,128,8
-    COMBOBOX        IDC_TASKLISTOPTIONS,5,36,127,125,CBS_DROPDOWNLIST | 
+    LTEXT           "&Search:",IDC_SEARCHLABEL,3,24,128,8
+    COMBOBOX        IDC_TASKLISTOPTIONS,3,36,127,125,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
-    LTEXT           "I&ncluding:",IDC_STATIC,140,24,134,8
-    COMBOBOX        IDC_INCLUDE,140,36,127,30,CBS_DROPDOWNLIST | 
+    LTEXT           "I&ncluding:",IDC_STATIC,136,24,134,8
+    COMBOBOX        IDC_INCLUDE,136,36,127,30,CBS_DROPDOWNLIST | 
                     CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
                     WS_VSCROLL | WS_TABSTOP
-    LTEXT           "F&or tasks matching the following rules:",IDC_STATIC,5,
+    LTEXT           "F&or tasks matching the following rules:",IDC_STATIC,3,
                     56,287,8
     CONTROL         "List1",IDC_FINDLIST,"SysListView32",LVS_REPORT | 
                     LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_OWNERDRAWFIXED | 
                     LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_BORDER | 
-                    WS_TABSTOP,5,68,288,90
-    PUSHBUTTON      "Select &All",IDC_SELECTALL,84,172,50,14
-    LTEXT           "&Results:",IDC_RESULTSLABEL,139,175,234,8
+                    WS_TABSTOP,3,68,370,96
+    PUSHBUTTON      "Select &All",IDC_SELECTALL,78,172,50,14
+    LTEXT           "&Results:",IDC_RESULTSLABEL,133,175,240,8
     CONTROL         "List1",IDC_RESULTS,"SysListView32",LVS_REPORT | 
                     LVS_SINGLESEL | LVS_SHOWSELALWAYS | WS_BORDER | 
-                    WS_TABSTOP,5,191,368,93
-    CONTROL         "",IDC_HDIVIDER,"Static",SS_ETCHEDHORZ,5,164,368,1
-    CONTROL         "",IDC_VDIVIDER,"Static",SS_ETCHEDVERT,301,3,1,153
-    PUSHBUTTON      "Apply as &Filter",IDC_APPLYASFILTER,5,172,71,14
+                    WS_TABSTOP,3,191,370,94
+    PUSHBUTTON      "Apply as &Filter",IDC_APPLYASFILTER,2,172,71,14
 END
 
 IDD_WELCOME_PAGE2 DIALOG DISCARDABLE  0, 0, 276, 139
@@ -3891,6 +3889,12 @@ BEGIN
         RIGHTMARGIN, 448
         TOPMARGIN, 7
         BOTTOMMARGIN, 227
+    END
+
+    IDD_FINDTASKS_DIALOG, DIALOG
+    BEGIN
+        LEFTMARGIN, 3
+        BOTTOMMARGIN, 285
     END
 
     IDD_TASKICON_DIALOG, DIALOG
