--- a/KanbanBoard/KanbanBoard.vcxproj
+++ b/KanbanBoard/KanbanBoard.vcxproj
@@ -197,6 +197,7 @@ copy unicode_debug\KanbanBoard.dll ..\todolist\unicode_debug /y
     <None Include="KanbanBoard.def" />
     <None Include="res\column_toolbar.bmp" />
     <None Include="res\column_toolbar_std.bmp" />
+    <None Include="res\flag.bmp" />
     <None Include="res\help_button.ico" />
     <None Include="res\icon1.ico" />
     <None Include="res\KanbanBoard.rc2" />
