Allow user to pick format when emailing tasks

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -1167,7 +1167,7 @@ BEGIN
                     IDC_STATIC,7,7,172,22
 END
 
-IDD_SENDTASKS_DIALOG DIALOG DISCARDABLE  0, 0, 384, 215
+IDD_SENDTASKS_DIALOG DIALOG DISCARDABLE  0, 0, 384, 231
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Send Tasks"
 FONT 8, "Tahoma"
@@ -1175,10 +1175,14 @@ BEGIN
     LTEXT           "&Send:",IDC_STATIC,7,9,42,8
     COMBOBOX        IDC_SELTASKSSENDAS,52,7,178,30,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_GROUP | WS_TABSTOP
-    DEFPUSHBUTTON   "OK",IDOK,273,194,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,327,194,50,14
+    DEFPUSHBUTTON   "OK",IDOK,273,210,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,327,210,50,14
     CONTROL         "",IDC_FRAME,"Static",SS_BLACKFRAME | NOT WS_VISIBLE | 
-                    WS_DISABLED,7,28,370,157
+                    WS_DISABLED,7,45,370,157
+    LTEXT           "&Format",IDC_STATIC,7,28,22,8
+    COMBOBOX        IDC_FORMATS,52,25,178,125,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
+                    WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_IMPORT_DIALOG DIALOG DISCARDABLE  0, 0, 455, 234
@@ -3880,7 +3884,7 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 377
-        BOTTOMMARGIN, 208
+        BOTTOMMARGIN, 224
     END
 
     IDD_IMPORT_DIALOG, DIALOG
