Modify filter 'Title' label to match user preferences

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -868,85 +868,6 @@ BEGIN
                     IDC_STATIC,16,119,252,20
 END
 
-IDD_FILTER_DIALOG DIALOG DISCARDABLE  0, 0, 331, 214
-STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Filter Tasks"
-FONT 8, "Tahoma"
-BEGIN
-    LTEXT           "Sh&ow",IDC_FILTERLABEL,7,7,60,12,SS_CENTERIMAGE
-    COMBOBOX        IDC_FILTERCOMBO,69,7,80,112,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
-                    WS_TABSTOP
-    LTEXT           "T&itle",IDC_TITLEFILTERLABEL,181,7,60,12,SS_CENTERIMAGE
-    EDITTEXT        IDC_TITLEFILTERTEXT,244,7,80,12,ES_AUTOHSCROLL
-    LTEXT           "St&arted by",IDC_STARTFILTERLABEL,7,27,60,12,
-                    SS_CENTERIMAGE
-    COMBOBOX        IDC_STARTFILTERCOMBO,69,27,80,118,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
-                    WS_TABSTOP
-    EDITTEXT        IDC_STARTNEXTNDAYS,181,27,40,13,ES_AUTOHSCROLL | 
-                    ES_WANTRETURN
-    CONTROL         "DateTimePicker1",IDC_USERSTARTDATE,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | DTS_APPCANPARSE | DTS_LONGDATEFORMAT | 
-                    WS_TABSTOP,181,27,143,13
-    LTEXT           "&Due by",IDC_DUEFILTERLABEL,7,47,60,12,SS_CENTERIMAGE
-    COMBOBOX        IDC_DUEFILTERCOMBO,69,47,80,118,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
-                    WS_TABSTOP
-    EDITTEXT        IDC_DUENEXTNDAYS,181,47,40,12,ES_AUTOHSCROLL | 
-                    ES_WANTRETURN
-    CONTROL         "DateTimePicker1",IDC_USERDUEDATE,"SysDateTimePick32",
-                    DTS_RIGHTALIGN | DTS_APPCANPARSE | DTS_LONGDATEFORMAT | 
-                    WS_TABSTOP,181,47,143,13
-    LTEXT           "Above &Priority",IDC_PRIORITYFILTERLABEL,7,67,60,12,
-                    SS_CENTERIMAGE
-    COMBOBOX        IDC_PRIORITYFILTERCOMBO,69,67,80,118,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
-                    WS_TABSTOP
-    LTEXT           "Above &Risk",IDC_RISKFILTERLABEL,181,67,60,12,
-                    SS_CENTERIMAGE
-    COMBOBOX        IDC_RISKFILTERCOMBO,244,67,80,118,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
-                    WS_TABSTOP
-    LTEXT           "A&llocated to",IDC_ALLOCTOFILTERLABEL,7,87,60,12,
-                    SS_CENTERIMAGE
-    COMBOBOX        IDC_ALLOCTOFILTERCOMBO,69,87,80,118,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
-                    WS_VSCROLL | WS_TABSTOP
-    LTEXT           "A&llocated by",IDC_ALLOCBYFILTERLABEL,181,87,60,12,
-                    SS_CENTERIMAGE
-    COMBOBOX        IDC_ALLOCBYFILTERCOMBO,244,87,80,118,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
-                    WS_VSCROLL | WS_TABSTOP
-    LTEXT           "St&atus",IDC_STATUSFILTERLABEL,7,107,60,12,
-                    SS_CENTERIMAGE
-    COMBOBOX        IDC_STATUSFILTERCOMBO,69,107,80,118,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
-                    WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Cate&gory",IDC_CATEGORYFILTERLABEL,181,107,60,12,
-                    SS_CENTERIMAGE
-    COMBOBOX        IDC_CATEGORYFILTERCOMBO,244,107,80,118,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
-                    WS_VSCROLL | WS_TABSTOP
-    LTEXT           "&Version",IDC_VERSIONFILTERLABEL,7,127,60,12,
-                    SS_CENTERIMAGE
-    COMBOBOX        IDC_VERSIONFILTERCOMBO,69,127,80,118,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
-                    WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Ta&gs",IDC_TAGFILTERLABEL,181,127,60,12,SS_CENTERIMAGE
-    COMBOBOX        IDC_TAGFILTERCOMBO,244,127,80,118,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
-                    WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Option&s",IDC_STATIC,7,148,60,12
-    COMBOBOX        IDC_FILTEROPTIONS,69,147,255,112,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
-                    WS_VSCROLL | WS_TABSTOP
-    CONTROL         "",IDC_DIVIDER,"Static",SS_ETCHEDHORZ,7,185,317,1
-    DEFPUSHBUTTON   "&Clear Filter",IDC_CLEARFILTER,274,166,50,14
-    DEFPUSHBUTTON   "OK",IDOK,220,193,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,274,193,50,14
-END
-
 IDD_OFFSETDATES_DIALOG DIALOG DISCARDABLE  0, 0, 308, 150
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Offset Task Dates"
@@ -2027,6 +1948,84 @@ BEGIN
     EDITTEXT        IDC_PREFSLOCATION,7,18,286,14,ES_AUTOHSCROLL | 
                     ES_READONLY
     LTEXT           "Preferences location:",IDC_STATIC,7,7,286,8
+END
+
+IDD_FILTER_DIALOG DIALOG DISCARDABLE  0, 0, 244, 271
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Filter Tasks"
+FONT 8, "Tahoma"
+BEGIN
+    LTEXT           "Sh&ow",IDC_FILTERLABEL,7,7,109,8,SS_CENTERIMAGE
+    COMBOBOX        IDC_FILTERCOMBO,7,17,109,112,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
+                    WS_TABSTOP
+    LTEXT           "T&itle",IDC_TITLEFILTERLABEL,128,7,109,8,SS_CENTERIMAGE
+    EDITTEXT        IDC_TITLEFILTERTEXT,128,17,109,12,ES_AUTOHSCROLL
+    LTEXT           "St&arted by",IDC_STARTFILTERLABEL,7,37,109,8,
+                    SS_CENTERIMAGE
+    COMBOBOX        IDC_STARTFILTERCOMBO,7,47,109,118,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
+                    WS_TABSTOP
+    EDITTEXT        IDC_STARTNEXTNDAYS,128,47,40,13,ES_AUTOHSCROLL | 
+                    ES_WANTRETURN
+    CONTROL         "DateTimePicker1",IDC_USERSTARTDATE,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | DTS_APPCANPARSE | WS_TABSTOP,128,47,109,
+                    13
+    LTEXT           "&Due by",IDC_DUEFILTERLABEL,7,67,109,8,SS_CENTERIMAGE
+    COMBOBOX        IDC_DUEFILTERCOMBO,7,77,109,118,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
+                    WS_TABSTOP
+    EDITTEXT        IDC_DUENEXTNDAYS,128,77,40,12,ES_AUTOHSCROLL | 
+                    ES_WANTRETURN
+    CONTROL         "DateTimePicker1",IDC_USERDUEDATE,"SysDateTimePick32",
+                    DTS_RIGHTALIGN | DTS_APPCANPARSE | WS_TABSTOP,128,77,109,
+                    13
+    LTEXT           "Above &Priority",IDC_PRIORITYFILTERLABEL,7,97,109,8,
+                    SS_CENTERIMAGE
+    COMBOBOX        IDC_PRIORITYFILTERCOMBO,7,107,109,118,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
+                    WS_TABSTOP
+    LTEXT           "Above &Risk",IDC_RISKFILTERLABEL,128,97,109,8,
+                    SS_CENTERIMAGE
+    COMBOBOX        IDC_RISKFILTERCOMBO,128,107,109,118,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_HASSTRINGS | WS_VSCROLL | 
+                    WS_TABSTOP
+    LTEXT           "A&llocated to",IDC_ALLOCTOFILTERLABEL,7,127,109,8,
+                    SS_CENTERIMAGE
+    COMBOBOX        IDC_ALLOCTOFILTERCOMBO,7,137,109,118,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
+                    WS_VSCROLL | WS_TABSTOP
+    LTEXT           "A&llocated by",IDC_ALLOCBYFILTERLABEL,128,127,109,8,
+                    SS_CENTERIMAGE
+    COMBOBOX        IDC_ALLOCBYFILTERCOMBO,128,137,109,118,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
+                    WS_VSCROLL | WS_TABSTOP
+    LTEXT           "St&atus",IDC_STATUSFILTERLABEL,7,157,109,8,
+                    SS_CENTERIMAGE
+    COMBOBOX        IDC_STATUSFILTERCOMBO,7,167,109,118,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
+                    WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Cate&gory",IDC_CATEGORYFILTERLABEL,128,157,109,8,
+                    SS_CENTERIMAGE
+    COMBOBOX        IDC_CATEGORYFILTERCOMBO,128,167,109,118,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
+                    WS_VSCROLL | WS_TABSTOP
+    LTEXT           "&Version",IDC_VERSIONFILTERLABEL,7,187,109,8,
+                    SS_CENTERIMAGE
+    COMBOBOX        IDC_VERSIONFILTERCOMBO,7,197,109,118,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
+                    WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Ta&gs",IDC_TAGFILTERLABEL,128,187,109,8,SS_CENTERIMAGE
+    COMBOBOX        IDC_TAGFILTERCOMBO,128,197,109,118,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
+                    WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Option&s",IDC_STATIC,7,217,26,8
+    COMBOBOX        IDC_FILTEROPTIONS,7,227,230,112,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
+                    WS_VSCROLL | WS_TABSTOP
+    DEFPUSHBUTTON   "&Clear Filter",IDC_CLEARFILTER,28,250,60,14
+    DEFPUSHBUTTON   "OK",IDOK,131,250,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,187,250,50,14
 END
 
 
@@ -3846,14 +3845,6 @@ BEGIN
         BOTTOMMARGIN, 239
     END
 
-    IDD_FILTER_DIALOG, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 324
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 207
-    END
-
     IDD_OFFSETDATES_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
@@ -4079,6 +4070,14 @@ BEGIN
         RIGHTMARGIN, 293
         TOPMARGIN, 7
         BOTTOMMARGIN, 218
+    END
+
+    IDD_FILTER_DIALOG, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 237
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 264
     END
 END
 #endif    // APSTUDIO_INVOKED
