Add preference button to edit current language file

--- a/ToDoList/ToDoList.rc
+++ b/ToDoList/ToDoList.rc
@@ -206,7 +206,7 @@ END
 
 IDD_PREFGEN_PAGE DIALOGEX 0, 0, 400, 438
 STYLE WS_CHILD
-FONT 8, "Tahoma", 0, 0, 0x1
+FONT 8, "Tahoma"
 BEGIN
     LTEXT           "&Display Language:",IDC_STATIC,7,10,376,10
     CONTROL         "",IDC_LANGUAGE,"ComboBoxEx32",CBS_DROPDOWNLIST | 
@@ -280,6 +280,7 @@ BEGIN
     LTEXT           "Path to Stickies executable:",IDC_STICKIESPATHLABEL,18,
                     387,376,8
     EDITTEXT        IDC_PATHTOSTICKIESEXE,18,398,183,13,ES_AUTOHSCROLL
+    PUSHBUTTON      "&Edit...",IDC_EDIT_DISPLAYLANGUAGE,206,22,50,14
 END
 
 IDD_PREFMULTIUSER_PAGE DIALOG DISCARDABLE  0, 0, 400, 236
