Exploring a layout algorithm

--- a/UIExension/MindMapUIExtension/MindMapUIExtensionCore/MindMapUIExtensionCore.csproj
+++ b/UIExension/MindMapUIExtension/MindMapUIExtensionCore/MindMapUIExtensionCore.csproj
@@ -53,7 +53,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="MindMapUIExtensionCore.cs" />
+    <Compile Include="MindMapUIExtensionCore.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
