--- a/UIExension/MindMapUIExtension/MindMapUIExtensionCore/MindMapUIExtensionCore.csproj
+++ b/UIExension/MindMapUIExtension/MindMapUIExtensionCore/MindMapUIExtensionCore.csproj
@@ -48,6 +48,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MindMapControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MindMapControl.Designer.cs">
+      <DependentUpon>MindMapControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -64,6 +70,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="MindMapControl.resx">
+      <DependentUpon>MindMapControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
