--- a/UIExension/MindMapUIExtension/MindMapUIExtensionCore/MindMapUIExtensionCore.csproj
+++ b/UIExension/MindMapUIExtension/MindMapUIExtensionCore/MindMapUIExtensionCore.csproj
@@ -48,21 +48,19 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MindMapControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <Compile Include="MindMapControl.cs" />
     <Compile Include="MindMapControl.Designer.cs">
       <DependentUpon>MindMapControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="MindMapItem.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="MindMapUIExtensionCore.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="MindMapUIExtensionCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TdlMindMapControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="PluginHelpers">
