--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-Debug/
-Release/
+Debug/*
+Release/*
 
 # Compiled Object files
 *.slo
@@ -65,3 +65,4 @@ Release/
 *.ide
 *.CopyComplete
 *.aps
+*.resources
