--- a/ToDoList/ToDoList.vcxproj
+++ b/ToDoList/ToDoList.vcxproj
@@ -222,6 +222,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="PreferencesUICustomToolbarPage.cpp" />
     <ClCompile Include="PreferencesUIPage.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -378,6 +379,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <ClCompile Include="TDLContentTypeCombobox.cpp" />
+    <ClCompile Include="TDLCustomToolbar.cpp" />
     <ClCompile Include="TDLGoToTaskDlg.cpp" />
     <ClCompile Include="TDLImpExpAttributeMappingListCtrl.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -537,6 +539,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClCompile Include="TDLThemeComboBox.cpp" />
     <ClCompile Include="TDLThreadedExporterWnd.cpp" />
     <ClCompile Include="TDLTimeTrackerDlg.cpp" />
+    <ClCompile Include="TDLToolbarButtonListCtrl.cpp" />
     <ClCompile Include="TDLToolsUserInputDlg.cpp" />
     <ClCompile Include="TDLTransformDialog.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -607,6 +610,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="PreferencesTaskDefPage.h" />
     <ClInclude Include="PreferencesTaskPage.h" />
     <ClInclude Include="PreferencesToolPage.h" />
+    <ClInclude Include="PreferencesUICustomToolbarPage.h" />
     <ClInclude Include="PreferencesUIPage.h" />
     <ClInclude Include="PreferencesUITasklistColorsPage.h" />
     <ClInclude Include="PreferencesUITasklistPage.h" />
@@ -667,6 +671,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="TDLCommentsCtrl.h" />
     <ClInclude Include="TDLContentMgr.h" />
     <ClInclude Include="TDLContentTypeCombobox.h" />
+    <ClInclude Include="TDLCustomToolbar.h" />
     <ClInclude Include="TDLGoToTaskDlg.h" />
     <ClInclude Include="TDLImpExpAttributeMappingListCtrl.h" />
     <ClInclude Include="TDLCsvImportExportDlg.h" />
@@ -719,6 +724,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="TDLThemeComboBox.h" />
     <ClInclude Include="TDLThreadedExporterWnd.h" />
     <ClInclude Include="TDLTimeTrackerDlg.h" />
+    <ClInclude Include="TDLToolbarButtonListCtrl.h" />
     <ClInclude Include="TDLToolsUserInputDlg.h" />
     <ClInclude Include="TDLTransformDialog.h" />
     <ClInclude Include="TDLViewTabControl.h" />
